--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-app",
-  "homepage": "http://waqarhussain786.github.io/my-react-portfolio",
+  "homepage": "https://waqarhussain786.github.io/udemy-react/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
