--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
+    "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
